[package]
name = "feedback-axum-mongodb"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
bson = { version = "2.13.0", features = ["chrono-0_4"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
futures = { version = "0.3.31", default-features = false, features = ["async-await"] }
mongodb = "3.1.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["cors"] }
